--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>SecretShh(!)ift • Encrypt & Decrypt</title>
+  <title>SecretShift • Encrypt & Decrypt</title>
   <meta name="color-scheme" content="dark light" />
   <style>
     :root{
@@ -80,143 +80,4 @@
       border:1px solid var(--border);border-radius:999px;padding:6px 8px;font-size:14px
     }
     .mode input{accent-color:var(--accent)}
-    .footer{margin:18px 0;color:var(--muted);font-size:12px;text-align:center}
-  </style>
-</head>
-<body>
-  <div class="wrap">
-    <!-- Header -->
-    <div class="nav">
-      <div class="brand">
-        <div class="lock">🔒</div>
-        <div>
-          <h1>SecretShift</h1>
-          <div class="sub">Text encryption & decryption tool • <a class="link" href="https://x.com/sahotamanveer" target="_blank">@sahotamanveer</a></div>
-        </div>
-      </div>
-      <div class="right">
-        <span class="pill">Secure & Private</span>
-        <a class="coffee" href="#" title="Buy me a coffee">☕ Buy me a coffee</a>
-      </div>
-    </div>
-
-    <!-- Key -->
-    <div class="card">
-      <div class="label">Secret Key</div>
-      <input id="key" type="text" placeholder="Enter your secret key (letters only, a=1, b=2, etc.)" />
-      <div class="toolbar">
-        <div class="mode">
-          <label><input type="radio" name="mode" value="enc" checked /> Encrypt</label>
-          <label><input type="radio" name="mode" value="dec" /> Decrypt</label>
-        </div>
-        <span class="muted">Non-letters stay unchanged. Key advances only on letters.</span>
-      </div>
-    </div>
-
-    <!-- I/O -->
-    <div class="grid">
-      <div class="card">
-        <div class="label">Original Text</div>
-        <textarea id="plain" placeholder="Enter your text here..."></textarea>
-      </div>
-      <div class="card">
-        <div class="label">Output Text</div>
-        <textarea id="cipher" placeholder="Output will appear here..."></textarea>
-        <div class="toolbar">
-          <!-- ONE primary button that runs either Encrypt or Decrypt -->
-          <button id="runBtn" class="btn primary">Encrypt</button>
-          <button id="copyOut" class="btn">Copy Output</button>
-          <button id="pasteIn" class="btn">Paste Input</button>
-          <button id="swap" class="btn">Swap ↔</button>
-          <button id="shareWA" class="btn">Share to WhatsApp</button>
-        </div>
-      </div>
-    </div>
-
-    <div class="footer">Made with GitHub Pages • No data leaves your browser.</div>
-  </div>
-
-  <script>
-    // --- Cipher logic ---
-    function shiftChar(ch, n){
-      const A='A'.charCodeAt(0), Z='Z'.charCodeAt(0);
-      const a='a'.charCodeAt(0), z='z'.charCodeAt(0);
-      const c=ch.charCodeAt(0);
-      if(c>=A && c<=Z) return String.fromCharCode(((c-A+n)%26+26)%26 + A);
-      if(c>=a && c<=z) return String.fromCharCode(((c-a+n)%26+26)%26 + a);
-      return ch;
-    }
-    function keyToShifts(key){
-      key = (key||'').replace(/[^a-z]/gi,''); // letters only
-      return key.split('').map(k => k.toLowerCase().charCodeAt(0)-96);
-    }
-    function applyCipher(text, key, mode){
-      const shifts = keyToShifts(key);
-      if(!shifts.length) return text;
-      let i=0, out='';
-      for(const ch of text){
-        const isLetter = /[A-Za-z]/.test(ch);
-        const n = shifts[i % shifts.length];
-        out += mode==='enc' ? shiftChar(ch, n) : shiftChar(ch, -n);
-        if(isLetter) i++;
-      }
-      return out;
-    }
-
-    // --- UI wiring ---
-    const keyEl = document.getElementById('key');
-    const plain = document.getElementById('plain');
-    const cipher = document.getElementById('cipher');
-    const runBtn = document.getElementById('runBtn');
-    const copyOut = document.getElementById('copyOut');
-    const pasteIn = document.getElementById('pasteIn');
-    const swapBtn = document.getElementById('swap');
-    const shareWA = document.getElementById('shareWA');
-
-    function currentMode(){
-      return document.querySelector('input[name="mode"]:checked').value;
-    }
-    function updateRunLabel(){
-      runBtn.textContent = currentMode()==='enc' ? 'Encrypt' : 'Decrypt';
-    }
-    document.querySelectorAll('input[name="mode"]').forEach(r=>{
-      r.addEventListener('change', updateRunLabel);
-    });
-    updateRunLabel();
-
-    runBtn.addEventListener('click', ()=>{
-      const mode = currentMode();
-      if(mode==='enc'){
-        cipher.value = applyCipher(plain.value, keyEl.value, 'enc');
-      }else{
-        plain.value = applyCipher(cipher.value, keyEl.value, 'dec');
-      }
-    });
-
-    copyOut.addEventListener('click', ()=> navigator.clipboard.writeText(cipher.value||''));
-    pasteIn.addEventListener('click', async ()=>{
-      try{
-        const t = await navigator.clipboard.readText();
-        if(t) plain.value = t;
-      }catch(e){ alert('Clipboard permission needed.'); }
-    });
-    swapBtn.addEventListener('click', ()=>{
-      const a = plain.value;
-      plain.value = cipher.value;
-      cipher.value = a;
-    });
-
-    // --- Share to WhatsApp ---
-    shareWA.addEventListener('click', ()=>{
-      const out = (cipher.value && cipher.value.trim().length>0) ? cipher.value : plain.value;
-      if(!out || !out.trim()){
-        alert('Nothing to share yet.');
-        return;
-      }
-      const text = `Shared via SecretShift:\n\n${out}`;
-      const url = `https://wa.me/?text=${encodeURIComponent(text)}`;
-      window.open(url, '_blank'); // Works for mobile (WhatsApp) and desktop (WhatsApp Web)
-    });
-  </script>
-</body>
-</html>
+    .footer{margin:18px 0;color:var(--muted);font-size:1
